typescript/checker/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression3.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            23,
        ),
        hi: BytePos(
            26,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression3.ts:1:1
  |
1 | Foo(!/(\\?|&)adurl=/);
  | ^^^

